Fixed some issues and added some more features

--- a/dbms-project-frontend/src/styles/Layout.css
+++ b/dbms-project-frontend/src/styles/Layout.css
@@ -38,6 +38,10 @@
     background-color: var(--bg-app);
 }
 
+.sidebar-wrapper {
+    width: 250px;
+}
+
 /* Sidebar Styling */
 .sidebar {
     width: 250px;
